--- a/style.css
+++ b/style.css
@@ -148,3 +148,10 @@
    .card:hover {
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
    }
+.divtext{
+    display: flex;
+    padding: 26px 16px ;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+   }
